<?xml version="1.0" encoding="utf-8"?>

<!--
   /****************************************************************************************
    ** Hyundai Motor India Engineering Pvt Ltd
    ** Electronics Engineering Dept-1., - Software Development Team
    ** Do Not Copy Without Prior Permission
    *****************************************************************************************
    ** Project Name: ESDS Development
    ** Target: Proof Of Concept (NU Head Unit)
    ** File Name: activity_verify_pin_screen.xml
    ** @Author: Sivaram Boina
    ** @Co-Author: Sai Sriram Madhiraju
    ** Completion Date: 31-10-2017
    ****************************************************************************************/
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:background="@drawable/vertical">
    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:enabled="false"
        android:labelFor="@+id/password_field"
        android:visibility="invisible"
        android:minHeight="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="0dp"
        android:layout_alignParentStart="true" />
    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end"
        android:layout_alignTop="@+id/view_linear_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:text="@string/number_one"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:text="@string/number_two"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:text="@string/number_three"
                android:textColor="@color/Black" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:text="@string/number_four"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:text="@string/number_five"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:text="@string/number_six"
                android:textColor="@color/Black" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:text="@string/number_seven"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:text="@string/number_eight"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:text="@string/number_nine"
                android:textColor="@color/Black" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_clear"
                style="@style/keyboard_button"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:text="@string/number_zero"
                android:textColor="@color/Black" />

            <ImageButton
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:src="@drawable/backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/Black" />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/view_linear_layout"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/view1"
            android:contentDescription="view1"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rounded_corner_edit_text"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/view2"
            android:contentDescription="view2"
            android:background="@drawable/rounded_corner_edit_text"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/view3"
            android:contentDescription="view3"
            android:background="@drawable/rounded_corner_edit_text"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/view4"
            android:contentDescription="view4"
            android:background="@drawable/rounded_corner_edit_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter the PIN"
        android:textStyle="bold"
        android:textColor="#000"
        android:typeface="monospace"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

